plugins {
    id 'com.android.application'
}

android {
    namespace 'com.smbfilebrowser'
    compileSdk 34

    defaultConfig {
        applicationId "com.smbfilebrowser"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0.0"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            debuggable true
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    buildFeatures {
        viewBinding true
    }

    packaging {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
    
    lint {
        abortOnError false
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    
    // SMB库
    implementation 'eu.agno3.jcifs:jcifs-ng:2.1.10'
    
    // 图片加载
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    
    // 视频播放
    implementation 'androidx.media3:media3-exoplayer:1.2.1'
    implementation 'androidx.media3:media3-ui:1.2.1'
    
    // HTTP服务器（用于SMB流代理）
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    
    // JSON解析
    implementation 'com.google.code.gson:gson:2.10.1'
}
